--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    //Logging Network Calls
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     //room database
     implementation "androidx.room:room-runtime:2.0.0"
