--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,16 @@ dependencies {
     kapt "androidx.room:room-compiler:2.0.0"
 
     // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.1.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha01"
 
     //dagger for DI
     implementation "com.google.dagger:dagger:2.16"
+    implementation "com.google.dagger:dagger-android:2.16"
+    implementation "com.google.dagger:dagger-android-support:2.16"
+    kapt "com.google.dagger:dagger-compiler:2.16"
+    kapt "com.google.dagger:dagger-android-processor:2.16"
 
     //navigation  drawer
     implementation 'com.android.support:appcompat-v7:28.0.0'
