--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:4.8.0"
     implementation "com.github.bumptech.glide:recyclerview-integration:4.8.0"
 
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
