--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.android.tmdb.movie.degea9">
-    <!--request internet permission -->
+    <!-- request internet permission -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".TmdbApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:name=".TmdbApplication">
+            android:theme="@style/AppTheme">
+        <activity android:name=".ui.showdetail.ShowDetailActivity">
+        </activity>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
