--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,7 @@ dependencies {
     // Optional, if you use support library fragments:
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
     kapt 'com.android.databinding:compiler:3.1.4'
+
+    //circle imageview
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
