--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.showdetail.ShowDetailActivity">
-
+        <activity android:name=".ui.moviedetail.MovieDetailActivity">
         </activity>
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.showdetail.ShowDetailActivity">
+        </activity>
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
