--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.moviedetail.MovieDetailActivity">
+        <activity android:name=".ui.moviedetail.MovieDetailActivity"
+        android:theme="@style/AppTheme.TransparentTheme">
         </activity>
         <activity android:name=".ui.showdetail.ShowDetailActivity">
         </activity>
